@@ -2,24 +2,24 @@ Package: seqminer
 Type: Package
 Title: Efficiently Read Sequence Data (VCF Format, BCF Format and METAL
         Format) into R
-Version: 5.0
-Date: 2015-10-20
+Version: 5.2
+Date: 2016-05-02
 Author: Xiaowei Zhan <zhanxw@gmail.com> and Dajiang Liu
     <dajiang.liu@gmail.com>, with contributions from Heng Li
     <lh3@live.co.uk> (Heng Li wrote tabix and with MIT license
     we include tabix source codes).
 Maintainer: Xiaowei Zhan <zhanxw@gmail.com>
-Description: Integrate sequencing data (VCF/BCF) or meta-analysis results in R.
+Description: Integrate sequencing data (Variant call format, e.g. VCF or BCF) or meta-analysis results in R.
 Copyright: We have used the following software and made minimal
         necessary changes: Tabix, Heng Li <lh3@live.co.uk> (MIT
         license). We removed standard IO related functions, e.g.
         printf, fprintf ; also changed its un-safe pointer arithmetics.
 License: GPL | file LICENSE
 URL: http://seqminer.genomic.codes
-Packaged: 2015-10-21 22:15:35 UTC; zhanxw
+Packaged: 2016-05-02 17:22:53 UTC; zhanxw
 Repository: CRAN
 Suggests: testthat, SKAT
 SystemRequirements: zlib headers and libraries, optionally also bzip2
         and POSIX-compliant regex functions.
 NeedsCompilation: yes
-Date/Publication: 2015-10-22 08:24:42
+Date/Publication: 2016-05-03 08:26:15
